--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-	"package": "electron-packager .",
+	"rebuild": "electron-rebuild -f -w sqlite3",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/phistoh/AlbumList.git"
   },
   "author": "Moritz",
   "license": "ISC",
   "devDependencies": {
     "electron": "^9.1.1",
-    "electron-packager": "^15.0.0"
+    "electron-rebuild": "^1.11.0"
+  },
+  "dependencies": {
+    "sqlite3": "^5.0.0"
   }
 }
