--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-	"rebuild": "electron-rebuild -f -w sqlite3",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "rebuild": "electron-rebuild -f -w sqlite3",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "electron-builder install-app-deps"
   },
   "repository": {
     "type": "git",
@@ -15,10 +16,10 @@
   "author": "Moritz",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^11.5.0",
-    "electron-rebuild": "^1.11.0"
-  },
-  "dependencies": {
-    "sqlite3": "^5.0.0"
+    "electron": "^17.1.0",
+    "electron-builder": "^22.14.13",
+    "electron-rebuild": "^3.2.7",
+    "electron-reloader": "^1.2.3",
+    "sqlite3": "^5.0.2"
   }
 }
