--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "electron-rebuild": "^3.2.7",
     "electron-reloader": "^1.2.3",
     "sqlite3": "^5.0.2"
+  },
+  "dependencies": {
+    "node-gyp": "^9.0.0",
+    "tar": "^6.1.11"
   }
 }
